# MARBLE

./: Makefile.am  README.md  configure.ac
Paris/: INSTALL  paris.py
Paris/Analysis/: .GR.py.swp  GR.py  cuba.py  limits.c  limits.pyx  tests.py
Paris/Development/: peaks.py
Paris/FileGeneration/: generateVTK.py
Paris/Read/: ReadData.py  plotTrajectory.py  read.py
PostProcessing/: FFIOZAMOComparison.py  GrowthOfAnnihilation.py  GrowthOfPeak.py  Makefile.am  ProductionDataVariables.py  ProductionDensityProfileSpin.py  ProductionFigureFit.py  ProductionFigureGrowthOfAnnihilation.py  ProductionFigureRho.py  TestVariables.py  TestVariables2.py  binDegeneracies.py  binDegeneracies2.py  calculateDensity.py  createProductionRuns.py  generatevts.py  helperFunctions.py  plotDensity.py  processData.py  test.py
Tests/: Makefile.am  calculateCOM.py  calculateDensity.py  calculateDensityFromNumbers.py  comparison.py  convertDataToGyoto.py  createComparisonPlot.py  createFinalComparison.py  plotCOM.py  plotCOMComparison.py  plotConstantCoreZAMODensity.py  plotFFIOVolume.py  pool.py  processConstantCoreData.py  testadiabaticgrowth.py  testlimits.py
src/: GrowBlackHole.cpp  GrowBlackHole.h  Makefile.am  definition.h  grid.cpp  grid.h  growthsampling.cpp  haloFunctions.cpp  haloFunctions.h  helperFunctions.cpp  helperFunctions.h  lookupTable.cpp  lookupTable.h  misc.cpp  misc.h  rpoly_ak1.cpp  rpoly_ak1.h  rungyoto.cpp  sampling.cpp  sampling.h  testLookupTable.cpp  testLookupTableMC.cpp  testLookupTableRead.cpp  testconstantcore.cpp  testgrowthsampling.cpp  testlimits.cpp  testlimits_old.cpp
